cabal-version:      2.4
name:               x2048
version:            0.1.0.0

synopsis:           A simple 2048 game implementation in Haskell
description:        This package provides a basic implementation of the popular 2048 game using Haskell.
bug-reports:        https://github.com/yourusername/x2048/issues
license:            MIT
author:             archiso
maintainer:         awesomelax7@gmail.com
copyright:          2024 archiso
category:           Games
extra-source-files: CHANGELOG.md

executable x2048
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.16.4.0,
                      OpenGL ^>=3.0,
                      GLUT ^>=2.7,
                      random ^>=1.2,
                      FTGL >= 2.1
    hs-source-dirs:   app
    default-language: Haskell2010